[package]
name = "zxr"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
flate2 = "1.0"      # zlib for glass compressed tags
zstd = "0.13"       # ZIM cluster decompression (type 5)
rust-stemmers = "1.2"  # Snowball English stemmer (matches the index's Porter2 stemming)

[profile.release]
opt-level = 3
